2016-05-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi) <@novalidate>,
	* texi2any.pl <option processing>,
	* tp/Texinfo/Structuring.pm (nodes_tree)
	(associate_internal_references),
	* tp/Texinfo/Common.pm (%default_parser_state_configuration): 
	Use $self->{'info'}->{'novalidate'} instead of
	$self->{'novalidate'}.  Delete some commented-out code.

2016-05-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\indexnofontsvalue): New definition for a 
	@value when expanded in an index entry sort key.
	(\indexnofonts): Call it.
	(\dummyvalue): If @value is undefined, pass through an 
	unexpanded @value command to the auxiliary file.

2016-05-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\commondummies): Move definitions of 
	\definedummyword, \definedummyletter, \definedummyaccent out of 
	\commondummies.  Reorder a comment to put content about control 
	words next to content about \definedummyword.  Rename this macro 
	\definedummies, to reduce confusion with \commondummiesnofonts.

	(\commondummiesnofonts): Use different names for the parameters.
	Add a comment saying what is listed here.

2016-05-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo-tex-test.texi (Test of auxiliary files): Note 
	where cross-references should definitely work.  Add section 
	testing `-' and `_' in a @value.

2016-05-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\setref): Give \value a definition to match 
	those in \xrdef, \refx and \xrefX, to fix @value in 
	cross-reference targets.

2016-05-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\dummyvalue): New definition of @value for 
	writing to auxiliary files.  Expand the @value at the time of 
	writing, reversing change on 2016-05-07.
	(\commondummies): Use \dummyvalue definition for @value.
	(Files using @value's in section titles broken when value was 
	@set after the table of contents, reported by Paul Eggert.
